[Bug #1163] Fixed visibility of allocation panel scroll bars
FEA: ItEr75S04BugFixing

--- a/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
+++ b/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
@@ -1489,6 +1489,11 @@ display:none;
     color: #555555;
 }
 
+.advanced-assignment-area > .z-center-body {
+    overflow: visible !important;
+    overflow: visible !important;
+}
+
 input.z-spinner-text-disd,
 input.z-datebox-text-disd {
     color: #000000 !important;
